[workspace]
members = [
  "crates/winatep-wire-types",
]

[workspace.dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1"
fern = "0.6"
futures-core = "0.3.30"
futures-lite = "2.3.0"
glam = { version = "0.28.0", features = ["serde"] }
image = { version = "0.25.5", features = ["serde"] }
js-sys = "0.3"
log = "0.4.22"
serde = "1.0.204"
serde_json = "1.0.120"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
