[workspace]
members = [ 
  "crates/winatep-client",
  "crates/winatep-wire-types",
]

resolver = "2"

[workspace.dependencies]
env_logger = "0.11.6"
futures-util = "0.3.31"
futures-lite = "2.3.0"
glam = { version = "0.28.0", features = ["serde"] }
image = { version = "0.25.5", features = ["serde"] }
log = "0.4.22"
reqwest = "0.12"
reqwest-websocket = "0.4.4"
serde = "1.0.204"
serde_json = "1.0.120"
snafu = "0.8"
tokio = "1.43"
