[package]
name = "winatep-client"
version = "0.1.0"
edition = "2021"
description = "Native and WASM Rust client to the Doasif WINATEP driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util.workspace = true
log.workspace = true
reqwest.workspace = true
reqwest-websocket.workspace = true
serde_json.workspace = true
snafu.workspace = true
winatep-wire-types = { path = "../winatep-wire-types" }

[dev-dependencies]
env_logger.workspace = true
futures-lite.workspace = true
tokio = { workspace = true, features = ["full"] }
